# Projet_IMI

./: README.md
code_kinect/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  kinect-exemple  kinect-exemple.cbp
code_kinect/src/: Makefile  Makefile~  main.cpp
code_skinning/: CMakeLists.txt
code_skinning/project/data/StickFigurea/: stick_bind_pose.skeleton
code_skinning/project/data/blender_mesh/: Scotty.blend  left_arm_bind_pose.skeleton~  scotty_bind_pose.skeleton  scotty_bind_pose_bras_etendu.skeleton  scotty_bind_pose_kinect.skeleton  scotty_bind_pose_kinect_bras_etendu.skeleton
code_skinning/project/src/lib/interface/: moc_application_qt.cxx_parameters
code_skinning/project/src/local/interface/: mainwindow.ui  moc_myWidgetGL.cxx  moc_myWidgetGL.cxx_parameters  moc_myWindow.cxx  moc_myWindow.cxx_parameters  myWidgetGL.cpp  myWidgetGL.hpp  myWindow.cpp  myWindow.hpp
code_skinning/project/src/local/scene/: scene.cpp  scene.hpp
code_skinning/project/src/skinning/: mesh_skinned.cpp  skeleton_animation.cpp  skeleton_geometry.cpp
